--- a/Expert-System-21/Expert-System-21.csproj
+++ b/Expert-System-21/Expert-System-21.csproj
@@ -49,7 +49,8 @@
         <Compile Include="ExpertSystem\ExpertSystem\Types\ImplicationType.cs" />
         <Compile Include="ExpertSystem\Notation\ReversePolishNotation.cs" />
         <Compile Include="ExpertSystem\Parser\FileParser.cs" />
-        <Compile Include="ExpertSystem\Preprocessing\StringPreprocessing.cs" />
+        <Compile Include="ExpertSystem\Parser\FileParserWithAnswer.cs" />
+        <Compile Include="MyExtensions\MyExtensions.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
