--- a/Expert_system_Unit_Test/Expert_system_Unit_Test.csproj
+++ b/Expert_system_Unit_Test/Expert_system_Unit_Test.csproj
@@ -42,6 +42,7 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ErrorTests.cs" />
         <Compile Include="ReversePolishNotationTest.cs" />
         <Compile Include="Tests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
