--- a/Expert-System-21/Expert-System-21.csproj
+++ b/Expert-System-21/Expert-System-21.csproj
@@ -35,6 +35,7 @@
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.Windows.Forms" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
@@ -51,6 +52,7 @@
         <Compile Include="ExpertSystem\Notation\ReversePolishNotation.cs" />
         <Compile Include="ExpertSystem\Parser\FileParser.cs" />
         <Compile Include="ExpertSystem\Parser\FileParserWithAnswer.cs" />
+        <Compile Include="Forms\MainForm.cs" />
         <Compile Include="MyExtensions\MyExtensions.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
