--- a/Expert-System-21/Expert-System-21.csproj
+++ b/Expert-System-21/Expert-System-21.csproj
@@ -66,9 +66,10 @@
         <Compile Include="ExpertSystem\Parser\FileParserWithAnswer.cs" />
         <Compile Include="Forms\MainForm.cs" />
         <Compile Include="MyExtensions\MyExtensions.cs" />
-        <Compile Include="PraphVisualizer.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Visualizer\NodeInfoVisualise.cs" />
+        <Compile Include="Visualizer\PraphVisualizer.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
