--- a/Expert-System-21/packages.config
+++ b/Expert-System-21/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.7.82" targetFramework="net471" />
   <package id="Microsoft.Msagl" version="1.1.3" targetFramework="net471" />
   <package id="Microsoft.Msagl.Drawing" version="1.1.3" targetFramework="net471" />
   <package id="Microsoft.Msagl.GraphViewerGDI" version="1.1.3" targetFramework="net471" />
