--- a/Expert_system_Unit_Test/Expert_system_Unit_Test.csproj
+++ b/Expert_system_Unit_Test/Expert_system_Unit_Test.csproj
@@ -43,6 +43,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="ErrorTests.cs" />
+        <Compile Include="FileParserTest.cs" />
         <Compile Include="ReversePolishNotationTest.cs" />
         <Compile Include="Tests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
