refactor graph visualisation

--- a/Expert-System-21/Expert-System-21.csproj
+++ b/Expert-System-21/Expert-System-21.csproj
@@ -79,7 +79,7 @@
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Visualizer\NodeInfoVisualise.cs" />
-        <Compile Include="Visualizer\PraphVisualizer.cs" />
+        <Compile Include="Visualizer\GraphVisualizer.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
