--- a/Expert_system_Unit_Test/Expert_system_Unit_Test.csproj
+++ b/Expert_system_Unit_Test/Expert_system_Unit_Test.csproj
@@ -44,6 +44,7 @@
     <ItemGroup>
         <Compile Include="ErrorTests.cs" />
         <Compile Include="FileParserTest.cs" />
+        <Compile Include="GraphVisualizerTest.cs" />
         <Compile Include="ReversePolishNotationTest.cs" />
         <Compile Include="Tests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
