--- a/Expert_system_Unit_Test/packages.config
+++ b/Expert_system_Unit_Test/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="Microsoft.CodeCoverage" version="16.5.0" targetFramework="net471" />
+  <package id="Microsoft.NET.Test.Sdk" version="16.5.0" targetFramework="net471" />
+  <package id="MSTest.TestAdapter" version="2.1.0" targetFramework="net471" />
+  <package id="MSTest.TestFramework" version="2.1.0" targetFramework="net471" />
+  <package id="NUnit" version="3.12.0" targetFramework="net471" />
 </packages>
