--- a/Expert-System-21/Expert-System-21.csproj
+++ b/Expert-System-21/Expert-System-21.csproj
@@ -69,7 +69,7 @@
         <Compile Include="Expert_System_21\ExpertSystem\Node\Node.cs" />
         <Compile Include="Expert_System_21\ExpertSystem\Types\ConnectorType.cs" />
         <Compile Include="Expert_System_21\ExpertSystem\Types\ImplicationType.cs" />
-        <Compile Include="Expert_System_21\Logs\LogResult.cs" />
+        <Compile Include="Expert_System_21\Logs\Logger.cs" />
         <Compile Include="Expert_System_21\Notation\ReversePolishNotation.cs" />
         <Compile Include="Expert_System_21\Parser\FileParser.cs" />
         <Compile Include="Expert_System_21\Parser\FileParserWithAnswer.cs" />
